<?xml version="1.0"?>
<package format="2">
  <name>merge_maps_3d</name>
  <version>1.0.0</version>
  <description>
    TODO merge_maps_3d description
  </description>

  <author email="linh.nguyen@enway.ai">Linh Nguyen</author>
  <maintainer email="linh.nguyen@enway.ai">Linh Nguyen</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>safety_compile_flags</build_depend>

  <depend>enway_helper</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>fast_gicp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ndt_omp</depend>
  <depend>phaser_core</depend>
  <build_depend>libg2o</build_depend>

</package>
